--- a/index.html
+++ b/index.html
@@ -7,5 +7,20 @@
     <title>Barber Shop</title>
     <link rel="stylesheet" href="./styles.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- Topo -->
+    <header class="header">
+      <div class="logo-container">
+        <img src="./img/logo.jpg" alt="Logo da Barbear Shop" class="logo" />
+      </div>
+      <nav class="navbar">
+        <ul>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#services">Serviços</a></li>
+          <li><a href="#about">Sobre Nós</a></li>
+          <li><a href="#contact">Contato</a></li>
+        </ul>
+      </nav>
+    </header>
+  </body>
 </html>
