chear: add section services the banner

--- a/index.html
+++ b/index.html
@@ -22,5 +22,14 @@
         </ul>
       </nav>
     </header>
+
+    <!-- Área Principal -->
+    <section id="home" class="hero-section">
+      <div class="hero-content">
+        <h1>Bem-Vindo à Barbearia Classic</h1>
+        <p>O melhor corte e barba da cidade!</p>
+        <img src="./img/banner-barbearia.jpg" alt="Banner da Barbearia" />
+      </div>
+    </section>
   </body>
 </html>
