chear: add section services and image

--- a/index.html
+++ b/index.html
@@ -31,5 +31,17 @@
         <img src="./img/banner-barbearia.jpg" alt="Banner da Barbearia" />
       </div>
     </section>
+
+    <!-- Serviços -->
+    <section id="services" class="services-section">
+      <h2>Serviços</h2>
+      <p>Oferecemos uma variedade de serviços para deixar você impecável.</p>
+      <ul>
+        <li>Corte Clássico</li>
+        <li>Barba Perfeita</li>
+        <li>Tratamento Capilar</li>
+        <li>Design de Cabelo</li>
+      </ul>
+    </section>
   </body>
 </html>
