chear: add section about us add image

--- a/index.html
+++ b/index.html
@@ -43,5 +43,17 @@
         <li>Design de Cabelo</li>
       </ul>
     </section>
+
+    <!-- Sobre Nós -->
+    <section id="about" class="about-section">
+      <h2>Sobre Nós</h2>
+      <p>
+        A Barbearia Classic foi fundada em 2020 com o objetivo de oferecer um
+        serviço de qualidade e conforto aos nossos clientes. Nosso time de
+        profissionais qualificados está sempre pronto para proporcionar uma
+        experiência única.
+      </p>
+      <img src="./img/sobre-nos-barbearia.jpeg" alt="Equipe da Barbearia" />
+    </section>
   </body>
 </html>
