chear: add section contact the maps

--- a/index.html
+++ b/index.html
@@ -55,5 +55,26 @@
       </p>
       <img src="./img/sobre-nos-barbearia.jpeg" alt="Equipe da Barbearia" />
     </section>
+
+    <!-- Contato -->
+    <section id="contact" class="contact-section">
+      <h2>Contato</h2>
+      <div class="map-container">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.867898888889!2d-46.63587988535157!3d-23.55052168472222!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5a2b207fc2c7%3A0x84fdfc0242936ee9!2sAv.%20Paulista%2C%20S%C3%A3o%20Paulo%2C%20SP!5e0!3m2!1spt-BR!2sbr!4v1684032000000!5m2!1spt-BR!2sbr"
+          width="600"
+          height="450"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
+      </div>
+      <div class="contact-info">
+        <p>Endereço: Rua Exemplo, 123 - Bairro, Cidade</p>
+        <p>Telefone: (11) 1234-5678</p>
+        <p>Email: contato@barbeariashop.com</p>
+      </div>
+    </section>
   </body>
 </html>
