chear: add footer

--- a/index.html
+++ b/index.html
@@ -76,5 +76,10 @@
         <p>Email: contato@barbeariashop.com</p>
       </div>
     </section>
+
+    <!-- Rodapé -->
+    <footer class="footer">
+      <p>&copy; 2025 Barbearia Shop. Todos os direitos reservados.</p>
+    </footer>
   </body>
 </html>
