--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <li><a href="#contact" class="btn-link">Agendar</a></li>
         </ul>
       </nav>
-      <button class="menu-toggle" aria-label="Abrir menu">
+      <button class="menu-toggle" aria-label="Abrir menu" aria-expanded="false">
         <span></span>
         <span></span>
         <span></span>
